fix align

--- a/Sass/page/Section1/_bird.scss
+++ b/Sass/page/Section1/_bird.scss
@@ -31,11 +31,14 @@
   }
   &-container {
     width: 100%;
-    height: 20vh;
+    height: 100vh;
     position: relative;
     display: flex;
     justify-content: flex-end;
     align-items: flex-end;
+    @include responsive.respond(smallPhone) {
+      height: 20vh;
+    }
   }
   // &-container {
   //   height: 100vh;
