--- a/css/style.css
+++ b/css/style.css
@@ -1424,11 +1424,16 @@ a {
 }
 .bird-container {
   width: 100%;
-  height: 20vh;
+  height: 100vh;
   position: relative;
   display: flex;
   justify-content: flex-end;
   align-items: flex-end;
+}
+@media only screen and (max-width: 575.98px) {
+  .bird-container {
+    height: 20vh;
+  }
 }
 .bird-image {
   position: relative;
